--- a/Twipster.safariextension/twipster.css
+++ b/Twipster.safariextension/twipster.css
@@ -225,3 +225,66 @@ body {
   max-width: none !important;
 }
 
+
+/*  ----------------------------------------------------------------
+    Front Page */
+
+.front-bg {
+  display: none !important;
+}
+.front-welcome {
+  display: none !important;
+}
+
+.front-card {
+  max-width: 100% !important;
+  left: 0 !important;
+  margin: 0 !important;
+  position: relative !important;
+  margin: 48px auto !important;
+}
+
+.front-signin {
+  background: none !important;
+  border: none !important;
+  -webkit-box-shadow: none !important;
+  -moz-box-shadow: none !important;
+  box-shadow: none !important;
+  position: relative !important;
+  left: auto !important;
+  margin: 0 auto !important;
+}
+
+.front-signup {
+  left: auto !important;
+  right: auto !important;
+  top: auto !important;
+  width: auto !important;
+  position: relative !important;
+  background: none !important;
+  border: none !important;
+  -webkit-box-shadow: none !important;
+  -moz-box-shadow: none !important;
+  box-shadow: none !important;
+  margin: 0 auto !important;
+  width: 300px !important;
+}
+
+.front-signup .btn {
+  margin: 0 auto !important;
+  left: auto !important;
+  right: auto !important;
+  width: auto !important;
+}
+
+.front-signup h2 {
+  display: none !important;
+}
+
+.front-signup div.placeholding-input {
+  display: none !important;
+}
+
+.front-container .footer {
+  display: none !important;
+}
