--- a/twipster.css
+++ b/twipster.css
@@ -1,10 +1,10 @@
 /*  -------------------------------------------------
-    
+
     Twipster
-    
+
     Simpler & More Readable Twitter Userstyles
     Based on Craig Mod's Minimal Twitter.
- 
+
     ------------------------------------------------- */
 
 
@@ -29,7 +29,7 @@ body {
 }
 
 /* Hide things */
-.trends, .topics, .bird-topbar-etched, .wtf-module, .site-footer, .mini-profile, .enhanced-media-thumbnails, .expand-action-wrapper, .close-all-tweets, .content-header, .expand-stream-item, .collapse-stream-item, .details.with-icn i, .list-link .chev-right, .dashboard .avatar-row, .dashboard .media-row, .promptbird, .promoted-tweet, .front-signup div.placeholding-input, .front-container .footer, .front-bg, .front-welcome {
+.trends, .topics, .bird-topbar-etched, .wtf-module, .Footer, .mini-profile, .enhanced-media-thumbnails, .expand-action-wrapper, .close-all-tweets, .content-header, .expand-stream-item, .collapse-stream-item, .details.with-icn i, .list-link .chev-right, .dashboard .avatar-row, .dashboard .media-row, .promptbird, .promoted-tweet, .front-signup div.placeholding-input, .front-container .footer, .front-bg, .front-welcome {
   display: none !important;
 }
 
@@ -47,7 +47,7 @@ body {
 .wrapper, .wrapper-narrow, .wrapper-permalink, .module .list-link, .front-signin, .front-signup, .stream .tweet:hover .tweet-actions {
   background: none !important;
 }
-   
+
 /* Lighten up secondary information */
 .username, .time, .time a, .metadata, .metadata button.btn-link, .metadata a, .with-icn, .with-icn:hover, .with-icn:focus, .context span, .context a.pretty-link b, .account-group span, .account-group s, .account-group strong {
   color: #aaa !important;
@@ -145,7 +145,7 @@ body {
   background-position: 0 -190px !important;
 }
 
-.tweet:hover .sm-rt, .tweet.focus .sm-rt, .simple-tweet .sm-rt, .hovered-stream-item .sm-rt, .simple-tweet.opened-tweet:hover .sm-rt { 
+.tweet:hover .sm-rt, .tweet.focus .sm-rt, .simple-tweet .sm-rt, .hovered-stream-item .sm-rt, .simple-tweet.opened-tweet:hover .sm-rt {
   background-position: -20px -190px !important;
 }
 
