--- a/Twipster.safariextension/twipster.css
+++ b/Twipster.safariextension/twipster.css
@@ -14,7 +14,7 @@
   line-height: 1.5 !important;
   color: #444 !important;
   margin-bottom: 0.25em !important;
-  -webkit-transition: all .1s linear !important;
+  /* -webkit-transition: all .1s linear !important; */
 }
 
 
