--- a/Twipster For Chrome/twipster.css
+++ b/Twipster For Chrome/twipster.css
@@ -26,7 +26,7 @@
 
 
 /* Hide things */
-.trends, .topics, .bird-topbar-etched, .wtf-module, .site-footer, .mini-profile, .enhanced-media-thumbnails, .expand-action-wrapper, .close-all-tweets, .content-header, .list-link .chev-right, .dashboard .avatar-row, .dashboard .media-row, .promptbird, .promoted-tweet, .Footer, .js-nav-links .Icon {
+.trends, .topics, .bird-topbar-etched, .wtf-module, .site-footer, .mini-profile, .enhanced-media-thumbnails, .expand-action-wrapper, .close-all-tweets, .content-header, .list-link .chev-right, .dashboard .avatar-row, .dashboard .media-row, .promptbird, .promoted-tweet, .Footer, .js-nav-links .Icon, .DashboardProfileCard, .WhoToFollow {
   display: none !important;
 }
 
@@ -82,7 +82,8 @@
   width: 100% !important;
 }
 
-body {
+body,
+body.ProfilePage {
   background-image: none !important;
   background-color: #fff !important;
 }
@@ -96,7 +97,8 @@ body {
 }
 
 
-.module .list-link {
+.module .list-link,
+.ProfileTweet {
   background: none !important;
   border: none !important;
 }
