--- a/Twipster.safariextension/twipster.css
+++ b/Twipster.safariextension/twipster.css
@@ -1,10 +1,10 @@
 /*  -------------------------------------------------
-    
+
     Twipster
-    
+
     Simpler & More Readable Twitter Userstyles
     Based on Craig Mod's Minimal Twitter.
- 
+
     ------------------------------------------------- */
 
 
@@ -26,11 +26,11 @@
 
 
 /* Hide things */
-.trends, .topics, .bird-topbar-etched, .wtf-module, .site-footer, .mini-profile, .enhanced-media-thumbnails, .expand-action-wrapper, .close-all-tweets, .content-header, .expand-stream-item, .collapse-stream-item, .details.with-icn i, .list-link .chev-right, .dashboard .avatar-row, .dashboard .media-row, .promptbird, .promoted-tweet, .front-signup div.placeholding-input, .front-container .footer, .front-bg, .front-welcome {
+.trends, .topics, .bird-topbar-etched, .wtf-module, .site-footer, .mini-profile, .enhanced-media-thumbnails, .expand-action-wrapper, .close-all-tweets, .content-header, .expand-stream-item, .collapse-stream-item, .details.with-icn i, .list-link .chev-right, .dashboard .avatar-row, .dashboard .media-row, .promptbird, .promoted-tweet, .front-signup div.placeholding-input, .front-container .footer, .front-bg, .front-welcome, .flex-module {
   display: none !important;
 }
 
-    
+
 /* Tweets Without Borders */
 .stream-item, .tweet, .stream-loading, .stream-end, .new-tweets-bar, .module {
   border: none !important;
@@ -45,7 +45,7 @@
   overflow: hidden !important;
 }
 
-    
+
 /* Lighten up secondary information */
 .username, .time, .time a, .metadata, .metadata button.btn-link, .metadata a, .with-icn, .with-icn:hover, .with-icn:focus, .context span, .context a.pretty-link b, .account-group span, .account-group s, .account-group strong {
   color: #aaa !important;
@@ -58,13 +58,13 @@
 .wrapper-settings .content-header {
   display: block !important;
 }
- 
+
 .wrapper, .wrapper-narrow, .wrapper-permalink {
   background: none !important;
   width: 90% !important;
   max-width: 56em !important;
 }
- 
+
 .dashboard, .content-main {
   float: none !important;
   width: 100% !important;
@@ -163,7 +163,7 @@ padding-bottom: 80px !important;
   background-position: 0 -190px !important;
 }
 
-.tweet:hover .sm-rt, .tweet.focus .sm-rt, .simple-tweet .sm-rt, .hovered-stream-item .sm-rt, .simple-tweet.opened-tweet:hover .sm-rt { 
+.tweet:hover .sm-rt, .tweet.focus .sm-rt, .simple-tweet .sm-rt, .hovered-stream-item .sm-rt, .simple-tweet.opened-tweet:hover .sm-rt {
   background-position: -20px -190px !important;
 }
 
@@ -287,4 +287,3 @@ padding-bottom: 80px !important;
   width: auto !important;
   position: relative !important;
 }
-
