--- a/chrome/src/twipster.css
+++ b/chrome/src/twipster.css
@@ -1,6 +1,6 @@
 /*
  * Twipster
- * Chrome and Safari extension for a more readable Twitter experience
+ * Chrome and Safari extensions for a more readable Twitter experience
  *
  * http://jxnblk.com/Twipster
  *
