--- a/chrome/src/twipster.css
+++ b/chrome/src/twipster.css
@@ -26,6 +26,7 @@
 
 /* Hide modules and promotions */
 .trends, /* Trends module */
+.promptbird, /* Prompt above timeline */
 .enhanced-media-thumbnails, /* Inline images */
 .content-header, /* Tweets column header */
 .promoted-tweet, /* Promoted tweets */
